force-app/main/default/objects/SAJ_Release__c/SAJ_Release__c.object-meta.xml
<CustomObject>
    <label>Release</label>
    <nameField>
        <label>Release/Build/Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>