force-app/main/default/objects/SAJ_Release__c/fields/Approximate_Budget__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Budget__c</fullName>
    <description>Approximate Budget for the release</description>
    <label>Approximate Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>