force-app/main/default/objects/SAJ_Release__c/fields/Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Assumptions__c</fullName>
    <description>State any assumptions e.g. resource availability, dependency on other projects, standards, precedents</description>
    <inlineHelpText>State any assumptions e.g. resource availability, dependency on other projects, standards, precedents</inlineHelpText>
    <label>Assumptions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>