force-app/main/default/objects/SAJ_Release__c/fields/Business_Problem__c.field-meta.xml
<CustomField>
    <fullName>Business_Problem__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is the business problem to solve? Should set the current environment / situation / context, of the proposal e.g. why has this need arisen? What alternatives have been considered?</inlineHelpText>
    <label>Business Problem</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>