force-app/main/default/objects/SAJ_Release__c/fields/BusinessProjectLead__c.field-meta.xml
<CustomField>
    <fullName>BusinessProjectLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead of the project from business platform</description>
    <label>Business Project Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Solutions4</relationshipName>
    <type>Lookup</type>
</CustomField>