force-app/main/default/objects/SAJ_Release__c/fields/Check_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Check_Visibility__c</fullName>
    <formula>IF(($Permission.SAJ_ALM_CTT_Architect),FALSE,IF(($Permission.SAJ_ALM_Project_Release_Manager &amp;&amp; RecordType.DeveloperName &lt;&gt; &apos;SAJ_App_Release&apos;),FALSE,IF(($Permission.SAJ_ALM_Project_Developer &amp;&amp; RecordType.DeveloperName = &apos;SAJ_Feature&apos;),FALSE,TRUE)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Visibility</label>
    <type>Checkbox</type>
</CustomField>