force-app/main/default/objects/SAJ_Release__c/fields/Clarity_ID__c.field-meta.xml
<CustomField>
    <fullName>Clarity_ID__c</fullName>
    <description>Clarity Id of the project</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Clarity ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>