force-app/main/default/objects/SAJ_Release__c/fields/CTO_Owner__c.field-meta.xml
<CustomField>
    <fullName>CTO_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enterprise Architect</description>
    <label>Enterprise Architect (user)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>