force-app/main/default/objects/SAJ_Release__c/fields/Delivery_Partner__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Partner__c</fullName>
    <description>Prime delivery partner for the technical solution</description>
    <inlineHelpText>Prime Delivery Partner or the SI Partner for the technical solution</inlineHelpText>
    <label>Delivery Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SAJ_Delivery_Partner</valueSetName>
    </valueSet>
</CustomField>