force-app/main/default/objects/SAJ_Release__c/fields/DeliveryInternalPartnerLead__c.field-meta.xml
<CustomField>
    <fullName>DeliveryInternalPartnerLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Delivery Partner Lead Name</description>
    <label>Delivery Partner Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Solutions2</relationshipName>
    <type>Lookup</type>
</CustomField>