force-app/main/default/objects/SAJ_Release__c/fields/Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Dependencies__c</fullName>
    <description>State any dependencies that are related to this project request. Include any related business activities coordinated with the completion of this request.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>State any dependencies that are related to this project request. Include any related business activities coordinated with the completion of this request.</inlineHelpText>
    <label>Dependencies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>