force-app/main/default/objects/SAJ_Release__c/fields/ITBusinessInternalPartner__c.field-meta.xml
<CustomField>
    <fullName>ITBusinessInternalPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IT Business Partner</description>
    <label>IT Business Partner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Solutions6</relationshipName>
    <type>Lookup</type>
</CustomField>