force-app/main/default/objects/SAJ_Release__c/fields/ITProjectInternalLead__c.field-meta.xml
<CustomField>
    <fullName>ITProjectInternalLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IT Project Lead</description>
    <label>IT Project Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Solutions7</relationshipName>
    <type>Lookup</type>
</CustomField>