force-app/main/default/objects/SAJ_Release__c/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Onboarding Step</description>
    <label>Onboarding Step</label>
    <referenceTo>SAJOnboarding__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Business_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>