force-app/main/default/objects/SAJ_Release__c/fields/Onboarding_Step_created__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Step_created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set the first time onboarding steps are generated</description>
    <label>Onboarding Step created</label>
    <type>Checkbox</type>
</CustomField>