force-app/main/default/objects/SAJ_Release__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project manager name</description>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Solutions1</relationshipName>
    <type>Lookup</type>
</CustomField>