force-app/main/default/objects/SAJ_Release__c/fields/ProjectInternalSponsor__c.field-meta.xml
<CustomField>
    <fullName>ProjectInternalSponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project Sponsor</description>
    <label>Project Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Solutions5</relationshipName>
    <type>Lookup</type>
</CustomField>