force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Application__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Application__c</fullName>
    <label>Application</label>
    <referenceTo>SAJ_App__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Release</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>