force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Branch_Name__c</fullName>
    <description>Attribute to store the name of the Release Branch to be deployed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>