force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Build_Validated__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Build_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the release been validated (=Build OK on validation sandbox)</description>
    <label>Build Validated?</label>
    <type>Checkbox</type>
</CustomField>