force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Completed_Design_Challenge__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Completed_Design_Challenge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when the project has gone through the Design challenge successfully</description>
    <inlineHelpText>Has the project successfully completed design challenge</inlineHelpText>
    <label>Completed Design Challenge</label>
    <type>Checkbox</type>
</CustomField>