force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Deployment_Status__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Deployment_Status__c</fullName>
    <description>Status of the deployment (Allowed values are: In Validation,Validation OK,Deployed to CQA,PreProd Preparation,Deployed to PreProd,Prod Preparation,Deployed to Prod)</description>
    <label>Deployment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Validation</fullName>
            </value>
            <value>
                <fullName>Validation OK</fullName>
            </value>
            <value>
                <fullName>Deployed to CQA</fullName>
            </value>
            <value>
                <fullName>PreProd Preparation</fullName>
            </value>
            <value>
                <fullName>Deployed to PreProd</fullName>
            </value>
            <value>
                <fullName>Prod Preparation</fullName>
            </value>
            <value>
                <fullName>Deployed to Prod</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>