force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Description__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Description__c</fullName>
    <description>Attribute to store description of the release</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>