force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Design_Discovery_Architect__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Design_Discovery_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Architect performing Design Discovery</description>
    <label>Design Discovery Architect</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>