force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Environment__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Environment record, to which release is being deployed to.</description>
    <label>Environment</label>
    <referenceTo>SAJ_Environment__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>