force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Environment_Path__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Environment_Path__c</fullName>
    <label>Environment Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>CQA</fullName>
            </value>
            <value>
                <fullName>PreProd</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Shared QA</fullName>
                <isActive>false</isActive>
                <label>Shared QA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>