force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Full_CI_Complete_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Full_CI_Complete_Date_Time__c</fullName>
    <description>Datetime stamp of full CI completion.</description>
    <label>Full CI Complete Date/Time</label>
    <type>DateTime</type>
</CustomField>