force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Full_CI_Completed_Flag__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Full_CI_Completed_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag to identify if CI is complete.</description>
    <label>Full CI Completed</label>
    <type>Checkbox</type>
</CustomField>