force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Preprod_Approved_Flag__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Preprod_Approved_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag to identify if the release is approved for Preprod.</description>
    <label>Approved Preprod</label>
    <type>Checkbox</type>
</CustomField>