force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Preprod_RFC__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Preprod_RFC__c</fullName>
    <description>Attribute to store the RFC for Preprod deployment.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Preprod RFC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>