force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Prod_Approved_Flag__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Prod_Approved_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag to identify if the release is approved for Prod.</description>
    <label>Approved Prod</label>
    <type>Checkbox</type>
</CustomField>