force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Prod_RFC__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Prod_RFC__c</fullName>
    <description>Attribute to store the RFC for Prod deployment.</description>
    <label>Prod RFC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>