force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Release__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self lookup to parent release record.</description>
    <label>Release/Build</label>
    <referenceTo>SAJ_Release__c</referenceTo>
    <relationshipLabel>Releases</relationshipLabel>
    <relationshipName>Releases</relationshipName>
    <type>Lookup</type>
</CustomField>