force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Shared_QA_Approved_Flag__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Shared_QA_Approved_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag to identify if the release is approved for Shared QA.</description>
    <label>Approved Shared QA</label>
    <type>Checkbox</type>
</CustomField>