force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Sonar_Status__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Sonar_Status__c</fullName>
    <label>Sonar Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not-Scanned</fullName>
                <default>true</default>
                <label>Not-Scanned</label>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Scanned Green</fullName>
            </value>
            <value>
                <fullName>Scanned Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>