force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Stash_PR_Url__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Stash_PR_Url__c</fullName>
    <description>Attribute to store stash URL</description>
    <label>Stash PR Url</label>
    <type>Url</type>
</CustomField>