force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Status__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Status__c</fullName>
    <description>Attribute to store all stages of release deployment.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Building</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Added</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Fixing</fullName>
            </value>
            <value>
                <fullName>Deploying</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
            <value>
                <fullName>Integration Testing</fullName>
            </value>
            <value>
                <fullName>Preprod Review</fullName>
            </value>
            <value>
                <fullName>Preprod Reviewing</fullName>
            </value>
            <value>
                <fullName>Ready for PreProd</fullName>
            </value>
            <value>
                <fullName>Release Testing</fullName>
            </value>
            <value>
                <fullName>Release Review</fullName>
            </value>
            <value>
                <fullName>Release Reviewing</fullName>
            </value>
            <value>
                <fullName>Ready for Release</fullName>
            </value>
            <value>
                <fullName>Releasing</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Pre Step</fullName>
            </value>
            <value>
                <fullName>Post Step</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>