force-app/main/default/objects/SAJ_Release__c/fields/SAJ_Type__c.field-meta.xml
<CustomField>
    <fullName>SAJ_Type__c</fullName>
    <description>Attribute to type of release deployment(Allowed values: CI, Release)</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CI</fullName>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>