force-app/main/default/objects/SAJ_Release__c/fields/Sonar_Rules__c.field-meta.xml
<CustomField>
    <fullName>Sonar_Rules__c</fullName>
    <description>This field marks if the SONAR check happened and if there are pending issues.</description>
    <label>SONAR Rules</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No issues</fullName>
            </value>
            <value>
                <fullName>Pass with exceptions</fullName>
            </value>
            <value>
                <fullName>No check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>