force-app/main/default/objects/SAJ_Release__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Start Date of the project</description>
    <inlineHelpText>Date when Project status changes to IPIX Project.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>