force-app/main/default/objects/SAJ_Release__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the project</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Design Challenge</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Pull Requested</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Go Live</fullName>
            </value>
            <value>
                <fullName>No-go</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>