force-app/main/default/objects/SAJ_Release__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <description>Target Go-live Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Business Go-live date</inlineHelpText>
    <label>Target Go-live Date</label>
    <type>Date</type>
</CustomField>