force-app/main/default/objects/SAJ_Release__c/fields/Target_Prod_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Prod_Deployment_Date__c</fullName>
    <description>Target Prod Deployment Date</description>
    <label>Target Prod Deployment Date</label>
    <type>Date</type>
</CustomField>