force-app/main/default/objects/SAJ_Release__c/recordTypes/SAJ_App_Release.recordType-meta.xml
<RecordType>
    <fullName>SAJ_App_Release</fullName>
    <active>true</active>
    <description>Functional Release Record (Per project)</description>
    <label>App Release</label>
</RecordType>