force-app/main/default/objects/SAJ_Release__c/recordTypes/SAJ_Build.recordType-meta.xml
<RecordType>
    <fullName>SAJ_Build</fullName>
    <active>true</active>
    <description>Deployable bundle of features to higher orgs</description>
    <label>Build</label>
</RecordType>