force-app/main/default/objects/SAJ_Release__c/recordTypes/SAJ_Feature.recordType-meta.xml
<RecordType>
    <fullName>SAJ_Feature</fullName>
    <active>true</active>
    <description>Development unit for an application</description>
    <label>Feature</label>
</RecordType>