force-app/main/default/objects/SAJ_Release__c/validationRules/SAJ_ALM_ReleaseManager_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>SAJ_ALM_ReleaseManager_Access</fullName>
    <active>true</active>
    <errorConditionFormula>IF(($Permission.SAJ_ALM_CTT_Architect),FALSE,IF(($Permission.SAJ_ALM_Project_Release_Manager &amp;&amp; RecordType.DeveloperName &lt;&gt; &apos;SAJ_App_Release&apos;),FALSE,IF(($Permission.SAJ_ALM_Project_Developer &amp;&amp; RecordType.DeveloperName = &apos;SAJ_Feature&apos;),FALSE,TRUE)))</errorConditionFormula>
    <errorMessage>You are not authorized to create App Release/Build Records. Please contact System Administrator.</errorMessage>
</ValidationRule>