force-app/main/default/objects/SAJ_Release__c/validationRules/SAJ_Draft_to_Design.validationRule-meta.xml
<ValidationRule>
    <fullName>SAJ_Draft_to_Design</fullName>
    <active>true</active>
    <description>When moving from Draft to Design Approximate Budget should be filled</description>
    <errorConditionFormula>AND(
NOT(OR(RecordType.Name = &apos;Feature&apos;,RecordType.Name = &apos;Release&apos;)),
ISCHANGED(Status__c), ISPICKVAL(Status__c, &apos;Design&apos;), ISNULL(Approximate_Budget__c)
)</errorConditionFormula>
    <errorMessage>Approximate Budget must be filled out to move to Design phase.</errorMessage>
</ValidationRule>