force-app/main/default/objects/SAJ_Release__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SAJ_Application__c</columns>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SAJ_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>